DataTables - dynamiczne tabele - lokalizacja polska oraz wygląd mobilny

--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -54,7 +54,7 @@
                             <div class="row">
                                 <div class="col-6">
                                     <label th:attr="for='number'">Numer pokoju</label>
-                                    <input class="form-control" type="text" th:attr="id='number'" th:field="*{roomNumber}"/>
+                                    <input class="form-control" type="text" th:attr="id='number'" th:field="*{roomNumber}" required="required"/>
                                 </div>
                                 <div class="col-6">
                                     <label th:attr="for='building'">Budynek</label>
