--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8" http-equiv="Content-Type" content="text/html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -27,7 +27,35 @@
 
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav mr-auto">
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" th:classappend="|${#httpServletRequest.requestURI=='/'? 'active': ''}|">
+                        <a class="nav-link" href="index.html" th:href="@{/}">Widok Główny</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" th:classappend="|${#httpServletRequest.requestURI=='/subjects'? 'active': ''}|">
+                        <a class="nav-link" href="#" th:href="@{/subjects}">Przedmioty</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" th:classappend="|${#httpServletRequest.requestURI=='/evals'? 'active': ''}|">
+                        <a class="nav-link" href="#" th:href="@{/evals}">Zaliczenia</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" sec:authorize="hasAuthority('USER')" th:classappend="|${#httpServletRequest.requestURI=='/calendar'? 'active': ''}|">
+                        <a class="nav-link" href="#" th:href="@{/calendar}">Kalendarz</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" th:classappend="|${#httpServletRequest.requestURI=='/rooms'? 'active': ''}|">
+                        <a class="nav-link" href="#" th:href="@{/rooms}">Sale</a>
+                    </li>
+                    <li class="nav-item d-md-none d-lg-none d-xl-none" th:classappend="|${#httpServletRequest.requestURI=='/teachers'? 'active': ''}|">
+                        <a class="nav-link" href="#" th:href="@{/teachers}">Nauczyciele</a>
+                    </li>
                 </ul>
+                <!--<div class="dropdown d-flex justify-content-center" style="padding-right: 1rem">-->
+                    <!--<button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton_nav" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">-->
+                        <!--Nawigacja-->
+                    <!--</button>-->
+                    <!--<div class="dropdown-menu-right dropdown-menu" aria-labelledby="dropdownMenuButton" style="left: auto;right: 0; top: 102%;">-->
+                        <!--&lt;!&ndash;<a class="dropdown-item" href="#">Ustawienia</a>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="dropdown-divider"></div>&ndash;&gt;-->
+                        <!--<a class="dropdown-item" href="#" th:href="@{/logout}">Wyloguj</a>-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="dropdown d-flex justify-content-center">
                     <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
