--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -31,7 +31,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#" th:href="@{/evals}" th:classappend="|${#httpServletRequest.requestURI=='/evals'? 'active': ''} ${#httpServletRequest.requestURI!='/evals'? 'text-muted' : ''}|"><i class="fa fa-calendar-check-o fa-fw"></i> Zaliczenia</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" sec:authorize="hasAuthority('USER')">
                 <a class="nav-link" href="#" th:href="@{/calendar}" th:classappend="|${#httpServletRequest.requestURI=='/calendar'? 'active': ''} ${#httpServletRequest.requestURI!='/calendar'? 'text-muted' : ''}|"><i class="fa fa-calendar fa-fw"></i> Kalendarz</a>
             </li>
             <li class="nav-item">
