--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--TODO: Dodać takie tabele dla pozostałych podstron-->
 <html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
@@ -6,13 +7,17 @@
     <!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
     <link href="../../static/css/timeline.css"
           th:href="@{/css/timeline.css}" rel="stylesheet" type="text/css"/>
-    <!--<link sec:authorize="hasAuthority('ADMIN')" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />-->
+
     <link sec:authorize="hasAuthority('ADMIN')" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
     <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
     <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" class="init">
         $(document).ready(function () {
-            $('#userTable').DataTable();
+            $('#userTable').DataTable({
+                "language":{
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Polish.json"
+                }
+            });
         });
     </script>
 </head>
@@ -207,7 +212,7 @@
             <h1><i class="fa fa-dashboard fa-fw"></i>&nbsp;Widok Główny: <th:block th:text="'Witaj administratorze'"></th:block></h1>
             <div class="row" style="margin-top: 2rem">
                 <h2>Użytkownicy</h2>
-                <table class="table table-responsive display" id="userTable" cellspacing="0" width="100%">
+                <table class="table table-responsive" id="userTable" cellspacing="0" width="100%">
                     <thead class="thead-inverse">
                     <tr>
                         <th>#</th>
