--- a/src/main/resources/templates/lessonform.html
+++ b/src/main/resources/templates/lessonform.html
@@ -9,13 +9,19 @@
 <div class="container-fluid">
     <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" >
-            <h1><i class="fa fa-pencil fa-fw"></i><th:block th:text="'Edycja zajęć: '+${lesson.subject.name}+' - '+${lesson.lessonType.nazwa}"></th:block></h1>
+            <h1><i class="fa fa-pencil fa-fw"></i><th:block th:text="'Edycja zajęć'"></th:block></h1>
             <div class="row" >
                 <form th:object="${lesson}" th:action="@{/lesson}" method="post">
                     <div class="container-fluid">
                         <div class="col-12">
                             <input type="hidden" th:field="*{id}"/>
-                            <input type="hidden" th:value="${lesson.subject.id}" th:attr="name='subject'"/>
+                            <input type="hidden" th:value="${lesson.subject.id}" th:attr="name='subject'" sec:authorize="hasAuthority('USER')"/>
+                            <div class="form-group" sec:authorize="hasAuthority('ADMIN')">
+                                <label for="subjectid">Przedmiot</label>
+                                <select class="form-control" id="subjectid" th:field="*{subject}"}>
+                                    <option th:each="subject : ${subjects}"
+                                </select>
+                            </div>
                             <div class="form-group">
                                 <label th:attr="for='type-select'+${lesson.id}">Rodzaj zajęć</label>
                                 <select class="form-control" th:attr="id='type-select'+${lesson.id}" th:field="*{lessonType}" >
