--- a/src/main/resources/templates/subjectform.html
+++ b/src/main/resources/templates/subjectform.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
     <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" >
-            <h1><i class="fa fa-pencil fa-fw"></i><th:block th:text="'Edycja przedmiotu: '+${subject.name}"></th:block></h1>
+            <h1><i class="fa fa-pencil fa-fw"></i><th:block th:text="'Edycja przedmiotu'"></th:block></h1>
             <div class="row" >
                 <form th:object="${subject}" th:action="@{/subject}" method="post">
                     <div class="container-fluid">
@@ -18,7 +18,7 @@
                             <input type="hidden" th:field="*{user.id}" sec:authorize="hasAuthority('USER')"/>
                             <div class="form-group" sec:authorize="hasAuthority('ADMIN')">
                                 <label for="userid">ID Użytkownika</label>
-                                <input id="userid" sec:authorize="hasAuthority('USER')" type="number" th:field="*{id}" required="required"/>
+                                <input id="userid" sec:authorize="hasAuthority('ADMIN')" type="number" th:field="*{user.id}" required="required"/>
                             </div>
                             <div class="form-group">
                                 <label th:attr="for='subject-name'+${subject.id}">Nazwa przedmiotu</label>
