--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -24,6 +24,7 @@
         $(document).ready(function () {
 
             $('#calendar').fullCalendar({
+                contentHeight: "auto",
                 minTime: "07:00:00",
                 maxTime: "21:00:00",
                 locale: 'pl',
