--- a/src/main/resources/templates/evals.html
+++ b/src/main/resources/templates/evals.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
     <!--/*/ <th:block th:include="fragments/headinc :: head"></th:block> /*/-->
-
+    <!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
+    <link sec:authorize="hasAuthority('ADMIN')" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" class="init">
+        $(document).ready(function () {
+            $('#evalTable').DataTable({
+                "language":{
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Polish.json"
+                }
+            });
+        });
+    </script>
 </head>
 <body><!--/*/ <th:block th:include="fragments/navbar :: nav"></th:block> /*/-->
-<div class="container-fluid">
-    <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+<div class="container-fluid" sec:authorize="isAuthenticated()">
+    <div class="row" sec:authorize="hasAuthority('USER')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" >
             <h1><i class="fa fa-calendar-check-o fa-fw"></i> Zaliczenia</h1>
             <div class="row" th:each="evalChunks : ${T(com.google.common.collect.Lists).partition(evals,2)}">
@@ -100,7 +112,43 @@
             </div>
         </div>
     </div>
+    <div class="row" sec:authorize="hasAuthority('ADMIN')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+            <h1><i class="fa fa-calendar-check-o fa-fw"></i> Zaliczenia</h1>
+            <div class="row" style="margin-top: 2rem">
+                <div class="col-sm">
+                    <h2>Zaliczenia</h2>
+                    <table class="table table-responsive display" id="evalTable" cellspacing="0" width="100%">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>Zajęcia</th>
+                            <th>Sala</th>
+                            <th>Typ zaliczenia</th>
+                            <th>Data</th>
+                            <th>Godzina</th>
+                            <th>Edytuj</th>
+                            <th>Usuń</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="evaluation:${evalsAll}">
+                            <th scope="row" th:text="${evaluation.id}"></th>
+                            <td th:text="${evaluation.lesson.subject.name}+' - '+${evaluation.lesson.lessonType.nazwa}"></td>
+                            <td th:text="${evaluation.room.roomNumber}"></td>
+                            <td th:text="${evaluation.evaluationType.nazwa}"></td>
+                            <td th:text="${evaluation.dzien}"></td>
+                            <td th:text="${evaluation.hour}"></td>
+                            <td><a href="#" th:href="${'/evaluation/edit_admin/'+evaluation.id}"><i class="fa fa-pencil" aria-hidden="true"></i></a></td>
+                            <td><a href="#" th:href="${'/evaluation/delete/'+evaluation.id}"><i class="fa fa-trash-o" aria-hidden="true"></i></a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a class="btn btn-primary" href="#" th:href="${'eval/new'}">Dodaj zaliczenie</a>
+                </div>
+            </div>
+        </main>
+    </div>
 </div>
-<!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
 </body>
 </html>
