--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
     <!--/*/ <th:block th:include="fragments/headinc :: head"></th:block> /*/-->
+    <!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
+    <link sec:authorize="hasAuthority('ADMIN')" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" class="init">
+        $(document).ready(function () {
+            $('#roomTable').DataTable({
+                "language":{
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Polish.json"
+                }
+            });
+        });
+    </script>
 
 </head>
 <body><!--/*/ <th:block th:include="fragments/navbar :: nav"></th:block> /*/-->
-<div class="container-fluid">
-    <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+<div class="container-fluid" sec:authorize="isAuthenticated()">
+    <div class="row" sec:authorize="hasAuthority('USER')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" >
             <h1><i class="fa fa-map-marker fa-fw"></i> Sale</h1>
             <div class="row" th:each="roomChunks : ${T(com.google.common.collect.Lists).partition(rooms,2)}">
@@ -72,7 +85,39 @@
             </div>
         </div>
     </div>
+    <div class="row" sec:authorize="hasAuthority('ADMIN')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+            <h1><i class="fa fa-map-marker fa-fw"></i> Sale</h1>
+            <div class="row" style="margin-top: 2rem">
+                <div class="col-sm">
+                    <h2>Sale</h2>
+                    <table class="table table-responsive display" id="roomTable" cellspacing="0" width="100%">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>Numer pokoju</th>
+                            <th>Budynek</th>
+                            <th>Użytkownik</th>
+                            <th>Edytuj</th>
+                            <th>Usuń</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="room:${roomsAll}">
+                            <th scope="row" th:text="${room.id}"></th>
+                            <td th:text="${room.roomNumber}"></td>
+                            <td th:text="${room.building}"></td>
+                            <td th:text="${room.user.id}+': '+${room.user.username}"></td>
+                            <td><a href="#" th:href="${'/room/edit/'+room.id}"><i class="fa fa-pencil" aria-hidden="true"></i></a></td>
+                            <td><a href="#" th:href="${'/room/delete/'+room.id}"><i class="fa fa-trash-o" aria-hidden="true"></i></a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a class="btn btn-primary" href="#" th:href="${'room/new'}">Dodaj pokój</a>
+                </div>
+            </div>
+        </main>
+    </div>
 </div>
-<!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
 </body>
 </html>
