--- a/src/main/resources/templates/teacherform.html
+++ b/src/main/resources/templates/teacherform.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
     <!--/*/ <th:block th:include="fragments/headinc :: head"></th:block> /*/-->
@@ -15,7 +15,7 @@
                     <div class="container-fluid">
                         <div class="col-12">
                             <input type="hidden" th:field="*{id}"/>
-                            <input type="hidden" th:field="*{user.id}"/>
+                            <input sec:authorize="hasAuthority('USER')" type="hidden" th:field="*{user.id}"/>
                             <div class="form-group row">
                                 <div class="col-6">
                                     <label th:attr="for='number'">Imię</label>
@@ -35,6 +35,14 @@
                                     <label th:attr="for='email'">Adres e-mail</label>
                                     <input class="form-control" type="email" th:attr="id='building'" th:field="*{email}"/>
                                 </div>
+                            </div>
+                            <div class="form-group" sec:authorize="hasAuthority('ADMIN')">
+                                <label th:attr="for='user-select'+${teacher.id}">Użytkownik</label>
+                                <select class="form-control" th:attr="id='user-select'+${teacher.id}" th:field="*{user.id}">
+                                    <option th:each="user : ${users}"
+                                            th:value="${user.id}"
+                                            th:text="${user.username}">Wireframe</option>
+                                </select>
                             </div>
                             <div class="form-group row justify-content-between">
                                 <div class="col-12 ">
