--- a/src/main/resources/templates/teachers.html
+++ b/src/main/resources/templates/teachers.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Student Timetable</title>
     <!--/*/ <th:block th:include="fragments/headinc :: head"></th:block> /*/-->
     <!--/*/ <th:block th:include="fragments/bottominc :: body"></th:block> /*/-->
+    <link sec:authorize="hasAuthority('ADMIN')" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" language="JavaScript" src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script sec:authorize="hasAuthority('ADMIN')" type="text/javascript" class="init">
+        $(document).ready(function () {
+            $('#teacherTable').DataTable({
+                "language":{
+                    "url": "//cdn.datatables.net/plug-ins/1.10.16/i18n/Polish.json"
+                }
+            });
+        });
+    </script>
+
 </head>
 <body><!--/*/ <th:block th:include="fragments/navbar :: nav"></th:block> /*/-->
-<div class="container-fluid">
-    <div class="row"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+<div class="container-fluid" sec:authorize="isAuthenticated()">
+    <div class="row" sec:authorize="hasAuthority('USER')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
         <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main" >
             <h1><i class="fa fa-address-card fa-fw"></i> Nauczyciele</h1>
             <div class="row" th:each="teacherChunks : ${T(com.google.common.collect.Lists).partition(teachers,2)}">
@@ -81,6 +94,43 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="row" sec:authorize="hasAuthority('ADMIN')"><!--/*/ <th:block th:include="fragments/sidebar :: sidebar"></th:block> /*/-->
+        <main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+            <h1><i class="fa fa-address-card fa-fw"></i> Nauczyciele</h1>
+            <div class="row" style="margin-top: 2rem">
+                <div class="col-sm">
+                    <h2>Sale</h2>
+                    <table class="table table-responsive display" id="teacherTable" cellspacing="0" width="100%">
+                        <thead class="thead-inverse">
+                        <tr>
+                            <th>#</th>
+                            <th>Imię</th>
+                            <th>Nazwisko</th>
+                            <th>E-mail</th>
+                            <th>Numer telefonu</th>
+                            <th>Użytkownik</th>
+                            <th>Edytuj</th>
+                            <th>Usuń</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="teacher:${teachersAll}">
+                            <th scope="row" th:text="${teacher.id}"></th>
+                            <td th:text="${teacher.name}"></td>
+                            <td th:text="${teacher.surname}"></td>
+                            <td th:text="${teacher.phone}"></td>
+                            <td th:text="${teacher.email}"></td>
+                            <td th:text="${teacher.user.id}+': '+${teacher.user.username}"></td>
+                            <td><a href="#" th:href="${'/teacher/edit/'+teacher.id}"><i class="fa fa-pencil" aria-hidden="true"></i></a></td>
+                            <td><a href="#" th:href="${'/teacher/delete/'+teacher.id}"><i class="fa fa-trash-o" aria-hidden="true"></i></a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <a class="btn btn-primary" href="#" th:href="${'teacher/new'}">Dodaj pokój</a>
+                </div>
+            </div>
+        </main>
     </div>
 </div>
 
